@@ -1,0 +1,3 @@
+mudim-note.label=Mudim is also enabled and may interfere with AVIM.
+mudim-button.label=Disable Mudim
+mudim-button.accesskey=u
