@@ -1,0 +1,3 @@
+mudim-note.label=Mudim también se activa y puede afectar AVIM.
+mudim-button.label=Apagar Mudim
+mudim-button.accesskey=u
