@@ -1,0 +1,3 @@
+mudim-note.label=Mudim cũng được bật lên và có thể đụng đến AVIM.
+mudim-button.label=Tắt Mudim
+mudim-button.accesskey=u
